--- a/Project Roentgen/src/view/Billing.fxml
+++ b/Project Roentgen/src/view/Billing.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <tabs>
     <Tab text="Billing Information">
       <content>
@@ -23,29 +24,43 @@
                         <TableColumn prefWidth="103.33334350585938" text="Procedure Date" />
                         <TableColumn prefWidth="103.33331298828125" text="Procedure Cost" />
                         <TableColumn prefWidth="86.0" text="Adjustments" />
+                        <TableColumn prefWidth="154.66665649414062" text="Procedure Type" />
                     </columns>
                   </TableView>
                   <Button layoutX="465.0" layoutY="331.0" mnemonicParsing="false" text="Update Information" />
-                  <TextField layoutX="108.0" layoutY="331.0" prefHeight="25.0" prefWidth="79.0" promptText="\$" />
-                  <TextField layoutX="294.0" layoutY="331.0" prefHeight="25.0" prefWidth="82.0" />
-                  <Label layoutX="60.0" layoutY="334.0" prefHeight="20.0" prefWidth="39.0" text="Cost:" textAlignment="CENTER">
+                  <TextField fx:id="proCostNew" layoutX="163.0" layoutY="331.0" prefHeight="25.0" prefWidth="79.0" promptText="\$" />
+                  <TextField fx:id="adjustmentsNew" layoutX="349.0" layoutY="331.0" prefHeight="25.0" prefWidth="82.0" promptText="\$" />
+                  <Label layoutX="115.0" layoutY="334.0" prefHeight="20.0" prefWidth="39.0" text="Cost:" textAlignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="212.0" layoutY="334.0" prefHeight="20.0" prefWidth="82.0" text="Adjustment:" textAlignment="CENTER">
+                  <Label layoutX="267.0" layoutY="334.0" prefHeight="20.0" prefWidth="82.0" text="Adjustment:" textAlignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
+                  <Button layoutX="27.0" layoutY="331.0" mnemonicParsing="false" text="Delete" />
                </children></AnchorPane>
       </content>
     </Tab>
-    <Tab text="x">
+    <Tab text="New Billing Statement">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <Button layoutX="523.0" layoutY="323.0" mnemonicParsing="false" text="Update" />
+                  <Button fx:id="createState" layoutX="216.0" layoutY="284.0" mnemonicParsing="false" text="Create New Statement" />
+                  <TextField fx:id="patientID" layoutX="104.0" layoutY="83.0" />
+                  <TextField fx:id="orderID" layoutX="376.0" layoutY="83.0" />
+                  <TextField fx:id="proCost" layoutX="104.0" layoutY="141.0" />
+                  <TextField fx:id="adjustments" layoutX="104.0" layoutY="209.0" />
+                  <Label layoutX="44.0" layoutY="87.0" text="Patient ID" />
+                  <Label layoutX="14.0" layoutY="145.0" text="Procedure Cost" />
+                  <Label layoutX="28.0" layoutY="213.0" text="Adjustments" />
+                  <Label layoutX="321.0" layoutY="87.0" text="Order ID" />
+                  <Label layoutX="284.0" layoutY="145.0" text="Procedure Date" />
+                  <Label layoutX="283.0" layoutY="213.0" text="Procedure Type" />
+                  <TextField fx:id="proType" layoutX="376.0" layoutY="209.0" />
+                  <DatePicker fx:id="proDate" layoutX="376.0" layoutY="141.0" />
                </children></AnchorPane>
       </content>
     </Tab>
