--- a/Project Roentgen/bin/view/ReceptionistView.fxml
+++ b/Project Roentgen/bin/view/ReceptionistView.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<TabPane fx:id="receptionistTabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ReceptionistController">
+<TabPane fx:id="receptionistTabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ReceptionistController">
   <tabs>
     <Tab fx:id="appointmentsTab" onSelectionChanged="#appointmentsTabClicked" text="Appointments">
       <content>
@@ -176,7 +176,7 @@
                               <TextField fx:id="firstNameTextField" editable="false" GridPane.columnIndex="1" />
                               <TextField fx:id="lastNameTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="317.0" text="Last Name:" GridPane.rowIndex="1" />
-                              <Label alignment="CENTER" prefHeight="17.0" prefWidth="383.0" text="Middle Name:" GridPane.rowIndex="2" />
+                              <Label alignment="CENTER" prefHeight="17.0" prefWidth="383.0" text="Middle Initial:" GridPane.rowIndex="2" />
                               <TextField fx:id="middleNameTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="352.0" text="Gender:" GridPane.rowIndex="3" />
                               <ComboBox fx:id="genderComboBox" disable="true" prefWidth="150.0" promptText="Select Gender" GridPane.columnIndex="1" GridPane.rowIndex="3" />
@@ -213,11 +213,6 @@
                               <RowConstraints maxHeight="156.0" minHeight="10.0" prefHeight="154.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                            <children>
-                              <Label alignment="CENTER" prefHeight="17.0" prefWidth="315.0" text="Phone Number:" GridPane.rowIndex="2" />
-                              <Label alignment="CENTER" prefHeight="17.0" prefWidth="367.0" text="Email Address:" GridPane.rowIndex="3" />
-                              <Label alignment="CENTER" prefHeight="17.0" prefWidth="344.0" text="Mailing Address:" GridPane.rowIndex="4" />
-                              <TextField fx:id="phoneNumTextField" editable="false" promptText="555-555-5555" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <TextField fx:id="emailTextField" editable="false" promptText="example@comp.com" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -228,12 +223,6 @@
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                  </rowConstraints>
-                                 <children>
-                                    <TextField fx:id="addressTextField" editable="false" promptText="Address" />
-                                    <TextField fx:id="cityTextField" editable="false" promptText="City" GridPane.rowIndex="1" />
-                                    <TextField fx:id="stateTextField" editable="false" promptText="State" GridPane.rowIndex="2" />
-                                    <TextField fx:id="zipTextField" editable="false" promptText="Zip Code" GridPane.rowIndex="3" />
-                                 </children>
                               </GridPane>
                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="310.0" text="Height:" />
                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="304.0" text="Weight:" GridPane.rowIndex="1" />
@@ -292,7 +281,8 @@
                      </children>
                   </GridPane>
                   <Button fx:id="editPatInfoButton" layoutX="14.0" layoutY="633.0" mnemonicParsing="false" onAction="#editPatButtonPressed" text="Edit Patient" />
-                  <Button layoutX="111.0" layoutY="633.0" mnemonicParsing="false" onAction="#deletePatButtonPressed" text="Delete Patient" />
+                  <Button fx:id="deletePatButton" layoutX="111.0" layoutY="633.0" mnemonicParsing="false" onAction="#deletePatButtonPressed" text="Delete Patient" />
+                  <Button fx:id="newPatButton" layoutX="212.0" layoutY="633.0" mnemonicParsing="false" onAction="#newPatButtonPressed" text="New Patient" />
                </children></AnchorPane>
       </content>
     </Tab>
